--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,18 +4,22 @@ body{
     line-height: 1.42857143;
     color: #333;
     background-color: #fff;
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: 0;
     padding: 0;
+    z-index: -3;
+    position: relative
 }
 #root{
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     z-index: -2;
     margin: 0;
+    /* padding-bottom: 25em; */
 }
 
 .mainContent{
